# nexus-core

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: protocol-v0.6.md
python/: pyproject.toml
python/nexus_core/: __init__.py
python/nexus_core/client/: __init__.py  platform_client.py
python/nexus_core/contracts/: __init__.py  bootstrap.py  commands.py  notifications.py
python/nexus_core/jwt/: __init__.py  errors.py  keys.py  sign.py
python/nexus_core/models/: __init__.py  areas.py  deployment.py  governance.py  instance.py  llm.py  memory.py  persona.py  space.py
python/tests/: test_bootstrap.py  test_jwt.py  test_models.py
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: index.ts
ts/src/contracts/: index.ts
ts/src/models/: index.ts
ts/tests/: models.test.ts
